Bug 388569 - Memory leaks when calling nsVariant::GetAsInterface. r=benjamin

--HG--
extra : rebase_source : 4bcffd36a6fa65c9b4dbefff4bc810254c2a222c