content/canvas/src/nsCanvasRenderingContext2D.cpp
@@ -1253,6 +1253,8 @@ nsCanvasRenderingContext2D::SetStrokeStyle(nsIVariant *aValue)
         nsCOMPtr<nsISupports> sup;
         rv = aValue->GetAsInterface(&iid, getter_AddRefs(sup));
         NS_ENSURE_SUCCESS(rv, rv);
+        if (iid)
+            NS_Free(iid);
 
         str.SetIsVoid(PR_TRUE);
         return SetStrokeStyle_multi(str, sup);
